app/src/main/java/com/example/weatherapp/error/ErrorPresenter.kt
package com.example.weatherapp.error

class ErrorPresenter